--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-	"name": "onion-backend",
+	"name": "onion_backend",
 	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
+	"main": "app.js",
+	"license": "MIT",
 	"scripts": {
-		"dev": "nodemon index.js"
+		"dev": "nodemon app.js"
 	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
 	"dependencies": {
-		"@prisma/client": "^5.9.1",
+		"@prisma/client": "^5.7.0",
+		"bcrypt": "^5.1.1",
 		"body-parser": "^1.20.2",
+		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
+		"crypto": "^1.0.1",
+		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
-		"nodemon": "^3.0.3",
-		"prisma": "^5.9.1"
+		"express-fileupload": "^1.4.3",
+		"jsonwebtoken": "^9.0.2",
+		"prisma": "^5.7.0"
+	},
+	"devDependencies": {
+		"nodemon": "^3.0.2"
 	}
 }
